--- a/projects/hhk-clothing.html
+++ b/projects/hhk-clothing.html
@@ -26,9 +26,19 @@
           <div class="line3"></div>
         </div>
         <ul class="links">
-          <li><a class="link" href="../index.html#projects">Projects</a></li>
-          <li><a class="link" href="../index.html#contact">Contact</a></li>
-          <li><a class="link" href="../index.html#about">About Me</a></li>
+          <li>
+            <a class="link project_link" href="../index.html#projects"
+              >Projects</a
+            >
+          </li>
+          <li>
+            <a class="link contact_link" href="../index.html#contact"
+              >Contact</a
+            >
+          </li>
+          <li>
+            <a class="link about_link" href="../index.html#about">About Me</a>
+          </li>
           <li>
             <a class="link" href="#">Resume<i class="fas fa-download"></i></a>
           </li>
