Added logo icon

--- a/projects/colorpalette.html
+++ b/projects/colorpalette.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zhapar | Front-end developer</title>
+    <link rel="icon" href="../img/logo-icon.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -26,9 +27,19 @@
           <div class="line3"></div>
         </div>
         <ul class="links">
-          <li><a class="link project_link" href="../index.html#projects">Projects</a></li>
-          <li><a class="link contact_link" href="../index.html#contact">Contact</a></li>
-          <li><a class="link about_link" href="../index.html#about">About Me</a></li>
+          <li>
+            <a class="link project_link" href="../index.html#projects"
+              >Projects</a
+            >
+          </li>
+          <li>
+            <a class="link contact_link" href="../index.html#contact"
+              >Contact</a
+            >
+          </li>
+          <li>
+            <a class="link about_link" href="../index.html#about">About Me</a>
+          </li>
           <li>
             <a class="link" href="#">Resume<i class="fas fa-download"></i></a>
           </li>
