Added link to netfilm page

--- a/projects/movie.html
+++ b/projects/movie.html
@@ -73,10 +73,10 @@
                   />
                 </div>
                 <div class="buttons">
-                  <a href="#" class="button"
+                  <a href="https://filmcloud.netlify.app/" class="button"
                     >Visit project <i class="fas fa-angle-double-right"></i
                   ></a>
-                  <a href="#" class="button"
+                  <a href="https://github.com/zhapar/netfilm" class="button"
                     >View code <i class="fas fa-angle-double-right"></i
                   ></a>
                 </div>
