Wrote about me and described projects

--- a/index.html
+++ b/index.html
@@ -431,26 +431,39 @@
             <div class="story">
               <div class="image">
                 <img src="./img/myface.jpg" alt="Zhapar" />
+                <h2 class="myName">Zhapar Manas uulu</h2>
               </div>
               <div class="text">
                 <p>
-                  Hello there! My name is Zhapar and I'm a Front End Developer.
-                </p>
-                <p>
-                  I started my journey as a self-taught web developer right out
-                  of High School when I first discovered the biggest CMS in the
-                  industy, WordPress. Ever since I have fallen in love with web
-                  development and spend most of my days taking my craft to the
-                  next level.
-                </p>
-                <p>
-                  Now a days I tend to code all of my projects from scratch in
-                  order to deliver a unique experience to every company.
-                </p>
-                <p>
-                  Like many other people I enjoy spending my free time
-                  increasing my knowledge of Web Development and building new
-                  and challenging projects.
+                  "The greatest glory in living lies not in never falling, but
+                  in rising every time we fall." I started to learn web
+                  development when I finished 9th grade. I started it because I
+                  had a dream to create a website where you can find movies,
+                  series, music, books, and self-development articles. This idea
+                  came to me when I was an 8th grader. I started to learn web
+                  development because I could not forget it; it was always in my
+                  mind. I wanted to create it because movies, series, and music
+                  will attract people to the website and these pages will
+                  redirect to books and self-development page by quotes of day
+                  and some interesting features. I think it will help to
+                  increase a number of people who want to improve themselves and
+                  it will change the world. From 10th grade I started to learn
+                  HTML, CSS, and JavaScript by watching YouTube videos. In that
+                  time, I told to my friends that I am going to create this
+                  website but unfortunately some of them did not believe to me
+                  that a simple boy can create such a website. Even though it
+                  hurt me and lowered self-esteem, I continued my journey. I
+                  continued because I had a passion to do it and I believed in
+                  myself. There were times where I wanted to quit web
+                  development because it was hard, I did not know what to learn,
+                  where to start and did not have an instructor or a mentor who
+                  could teach me, who would show the path. But I knew that if I
+                  will not proceed, I will regret about it for my whole life.
+                  That is why I could learn it and never gave up. Now I know
+                  HTML, CSS, SASS, JavaScript, React, and Redux. Therefore, I
+                  believe that I am capable to work in your company and this
+                  work will help me to increase my knowledge to achieve the
+                  dream of a little boy who wanted to improve the world.
                 </p>
               </div>
             </div>
