--- a/projects/colorpalette.html
+++ b/projects/colorpalette.html
@@ -57,12 +57,11 @@
             <h2 class="section-title">Overview</h2>
             <div class="project">
               <p class="project-text">
-                Browse your favorite Movies, TV shows, and actors. Search for
-                specific movies, shows or actors by date, rating, region and
-                other categories. Browse the latest and greatest films and to
-                find information about its actors, crew, and reviews. Rate and
-                favorite Movies, TV shows and actors while having access to them
-                through a user account. Login / Authentication.
+                Discover the world of colors with 9 popular palettes, where you
+                can copy any HEX or RGB code of color by just clicking on it.
+                Besides, you can lighten or darken colors by changing level on
+                top of palette or you can see all levels of color by clicking
+                more button. Moreover, you can create your own color palette!
               </p>
               <div class="project-preview">
                 <div class="image-container">
@@ -105,6 +104,8 @@
                   <li class="list">React Router</li>
                   <li class="list">Redux</li>
                   <li class="list">Hooks</li>
+                  <li class="list">Chroma js</li>
+                  <li class="list">Array move</li>
                   <li class="list">Sass</li>
                 </ul>
               </div>
