--- a/projects/movie.html
+++ b/projects/movie.html
@@ -57,12 +57,10 @@
             <h2 class="section-title">Overview</h2>
             <div class="project">
               <p class="project-text">
-                Browse your favorite Movies, TV shows, and actors. Search for
-                specific movies, shows or actors by date, rating, region and
-                other categories. Browse the latest and greatest films and to
-                find information about its actors, crew, and reviews. Rate and
-                favorite Movies, TV shows and actors while having access to them
-                through a user account. Login / Authentication.
+                Want to watch a movie but don't know what to watch? Netfilm can
+                help you with that. Browse and search your favorite movies. Read
+                information about them and see its actors. Watch trailers and
+                read reviews.
               </p>
               <div class="project-preview">
                 <div class="image-container">
@@ -73,10 +71,16 @@
                   />
                 </div>
                 <div class="buttons">
-                  <a href="https://filmcloud.netlify.app/" class="button"
+                  <a
+                    href="https://filmcloud.netlify.app/"
+                    target="_blank"
+                    class="button"
                     >Visit project <i class="fas fa-angle-double-right"></i
                   ></a>
-                  <a href="https://github.com/zhapar/netfilm" class="button"
+                  <a
+                    href="https://github.com/zhapar/netfilm"
+                    target="_blank"
+                    class="button"
                     >View code <i class="fas fa-angle-double-right"></i
                   ></a>
                 </div>
@@ -98,6 +102,7 @@
                   <li class="list">React</li>
                   <li class="list">React Router</li>
                   <li class="list">Redux</li>
+                  <li class="list">Redux thunk</li>
                   <li class="list">Hooks</li>
                   <li class="list">TMDB API</li>
                   <li class="list">Sass</li>
