Added redux saga to technologies used in clothing

--- a/projects/hhk-clothing.html
+++ b/projects/hhk-clothing.html
@@ -104,6 +104,7 @@
                   <li class="list">React</li>
                   <li class="list">React Router</li>
                   <li class="list">Redux</li>
+                  <li class="list">Redux Saga</li>
                   <li class="list">Hooks</li>
                   <li class="list">Firebase</li>
                   <li class="list">Sass</li>
