Add description of hhk-clothing

--- a/projects/hhk-clothing.html
+++ b/projects/hhk-clothing.html
@@ -57,12 +57,10 @@
             <h2 class="section-title">Overview</h2>
             <div class="project">
               <p class="project-text">
-                Browse your favorite Movies, TV shows, and actors. Search for
-                specific movies, shows or actors by date, rating, region and
-                other categories. Browse the latest and greatest films and to
-                find information about its actors, crew, and reviews. Rate and
-                favorite Movies, TV shows and actors while having access to them
-                through a user account. Login / Authentication.
+                Buy your favorite clothes from HHK-clothing. Here you can find
+                hats, jackets, sneakers, women, and men clothes. Create your
+                cart without registering to the website and pay your items
+                through stripe. Comfortable, accessible, and enjoyable.
               </p>
               <div class="project-preview">
                 <div class="image-container">
