Removed link and added my photo

--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
           <li><a class="link project_link" href="#projects">Projects</a></li>
           <li><a class="link contact_link" href="#contact">Contact</a></li>
           <li><a class="link about_link" href="#about">About Me</a></li>
-          <li>
-            <a class="link" href="#">Resume<i class="fas fa-download"></i></a>
-          </li>
         </ul>
       </div>
     </nav>
@@ -443,27 +440,27 @@
                   came to me when I was an 8th grader. I started to learn web
                   development because I could not forget it; it was always in my
                   mind. I wanted to create it because movies, series, and music
-                  will attract people to the website and these pages will
-                  redirect to books and self-development page by quotes of day
-                  and some interesting features. I think it will help to
-                  increase a number of people who want to improve themselves and
-                  it will change the world. From 10th grade I started to learn
-                  HTML, CSS, and JavaScript by watching YouTube videos. In that
-                  time, I told to my friends that I am going to create this
-                  website but unfortunately some of them did not believe to me
-                  that a simple boy can create such a website. Even though it
-                  hurt me and lowered self-esteem, I continued my journey. I
+                  will attract people to the website, and these pages will
+                  redirect to books and self-development page by quotes of the
+                  day and some interesting features. I think it will help to
+                  increase the number of people who want to improve themselves
+                  and it will change the world. From 10th grade, I started to
+                  learn HTML, CSS, and JavaScript by watching YouTube videos. At
+                  that time, I told to my friends that I am going to create this
+                  website but unfortunately some of them did not believe me that
+                  a simple boy can create such a website. Even though it hurt me
+                  and lowered my self-esteem, I continued my journey. I
                   continued because I had a passion to do it and I believed in
                   myself. There were times where I wanted to quit web
                   development because it was hard, I did not know what to learn,
-                  where to start and did not have an instructor or a mentor who
+                  where to start, and did not have an instructor or a mentor who
                   could teach me, who would show the path. But I knew that if I
-                  will not proceed, I will regret about it for my whole life.
-                  That is why I could learn it and never gave up. Now I know
-                  HTML, CSS, SASS, JavaScript, React, and Redux. Therefore, I
-                  believe that I am capable to work in your company and this
-                  work will help me to increase my knowledge to achieve the
-                  dream of a little boy who wanted to improve the world.
+                  will not proceed, I will regret it for my whole life. That is
+                  why I could learn it and never give up. Now I know HTML, CSS,
+                  SASS, JavaScript, React, and Redux. Therefore, I believe that
+                  I am capable to work in your company and this work will help
+                  me to increase my knowledge to achieve the dream of a little
+                  boy who wanted to improve the world.
                 </p>
               </div>
             </div>
