Connected my social medias

--- a/index.html
+++ b/index.html
@@ -413,10 +413,30 @@
             <h2 class="section-title">Contact</h2>
 
             <div class="contacts">
-              <a href="#" class="contact"><i class="fas fa-envelope"></i></a>
-              <a href="#" class="contact"><i class="fab fa-instagram"></i></a>
-              <a href="#" class="contact"><i class="fab fa-linkedin-in"></i></a>
-              <a href="#" class="contact"><i class="fab fa-github"></i></a>
+              <a
+                href="mailto:zhapar28@gmail.com"
+                target="_blank"
+                class="contact"
+                ><i class="fas fa-envelope"></i
+              ></a>
+              <a
+                href="https://www.instagram.com/zhapar_28/"
+                target="_blank"
+                class="contact"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/in/zhapar-manas-uulu-81b9541bb/"
+                class="contact"
+                target="_blank"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+              <a
+                href="https://github.com/zhapar"
+                target="_blank"
+                class="contact"
+                ><i class="fab fa-github"></i
+              ></a>
             </div>
             <div class="reveal-contact"></div>
           </div>
